# linalg

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
demo/: demo.cc
include/concepts/: base_concept.h  dense_concept.h
include/dense/: dense.h  dense_base.h  dense_concept.h  dense_dynamic.h  dense_static.h
src/: CMakeLists.txt  demo.cc
